<resources>
    <string name="app_bar_empty_waiting_room">Waiting room (empty)</string>
    <string name="app_bar_login">Login to play</string>
    <string name="app_bar_game">Game</string>
    <string name="app_bar_game_over">Game over</string>
    <string name="app_bar_game_won">Congratulation!</string>
    <string name="app_bar_waiting_room">Waiting room</string>
    <string name="app_title">DIM Space Team</string>
    <string name="debug_room_name">testRoom</string>
    <string name="degazer_button">DEGAZER</string>
    <string name="empty_waiting_room_title">Enter a room name to join or create a game…</string>
    <string name="full_waiting_room_title">Set your status to Ready, when everyone is ready, game will start</string>
    <string name="game_information">There is too much gas!</string>
    <string name="game_over_retry">Retry</string>
    <string name="game_over_subtitle">You reap what you sow.</string>
    <string name="game_over_title">You lost, what a team…</string>
    <string name="game_title">You are currently traveling in the first galaxy</string>
    <string name="game_won_score_information">Your score for this game was 220</string>
    <string name="game_won_subtitle">You\'re the best</string>
    <string name="game_won_title">You won the game !</string>
    <string name="has_joined_room">No room joined</string>
    <string name="high_scores_button">High Scores</string>
    <string name="is_ready">I am ready</string>
    <string name="join_game_button">Join a game room</string>
    <string name="login_action_bar">Login to play</string>
    <string name="login_start_button">Launch</string>
    <string name="login_subtitle">I\'m a famous astronaut</string>
    <string name="login_title">DIM Space Team</string>
    <string name="login_username">TonyStark-652</string>
    <string name="player_name">Player Name</string>
    <string name="player_not_ready_status">Waiting</string>
    <string name="register_button">Register an astronaut profile</string>
    <string name="register_subtitle">I am new to space program</string>
    <string name="socket_active">Socket connected</string>
    <string name="socket_not_active">Socket inactive</string>
    <string name="teleport_switch">Teleporteur</string>
</resources>