<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".GameOverFragment">

        <TextView
                android:id="@+id/gameOverTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/game_over_title"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"/>

        <TextView
                android:id="@+id/gameOverScoreInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_won_score_information"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameOverTitle"
                app:layout_constraintVertical_bias="0.07999998"/>

        <TextView
                android:id="@+id/gameOverTroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_over_subtitle"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameOverScoreInformation"
                app:layout_constraintVertical_bias="0.0"/>

        <Button
                android:id="@+id/gameOverRetryButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                android:text="@string/game_over_retry"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameOverTroll"
                app:layout_constraintVertical_bias="0.16000003" android:textColor="@android:color/white"/>

        <Button
                android:id="@+id/gameWonHighScoreButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/high_scores_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameOverRetryButton"
                app:layout_constraintVertical_bias="0.07999998"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>