<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".GameWonFragment">

        <TextView
                android:id="@+id/gameWonTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_won_title"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/gameWonScoreInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_won_score_information"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameWonTitle"
                app:layout_constraintVertical_bias="0.07999998"/>

        <TextView
                android:id="@+id/gameWonTroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_won_subtitle"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameWonScoreInformation"
                app:layout_constraintVertical_bias="0.0"/>

        <Button
                android:id="@+id/gameWonRetryButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                android:text="New game"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameWonTroll"
                app:layout_constraintVertical_bias="0.16000003" android:textColor="@android:color/white"/>

        <Button
                android:id="@+id/gameWonHighScoreButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:text="High Scores"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameWonRetryButton"
                app:layout_constraintVertical_bias="0.07999998"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
